--- a/index.html
+++ b/index.html
@@ -5,8 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdus Salam Portcolio </title>
     <link rel="shortcut icon" href="./images/my-pic.png" type="image/x-icon">
+    <!-- Google Font link Here -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    
+<body class="font-open-sans ">
+    <!-- Header Section Started here -->
+    <header >
+    <!-- Nav Section Started here -->
+
+        <nav>
+            <div>
+                <h2 class="logo">Sal<span class="color-orange">a</span>m</h2>
+            </div>
+            <ul class="manue">
+              
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><button class="btn-praimary" href="#">Hire Me</button></li>
+
+            </ul>
+        </nav>
+    <!-- Nav Section Emd here -->
+
+    </header>
+    <!-- Header Section Ends here -->
+
 </body>
 </html>
