i complite banner section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
         </nav>
     <!-- Nav Section Emd here -->
 
+    <!-- Banner Section Started here -->
+     <section id="banner">
+
+        <div class="banner-content">
+            <h2>Hi, I am</h2>
+            <h1>Abdus Salam</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div class="button">
+                <button class="btn-praimary">Download CV</button>
+                <button class="btn-praimary">Contact</button>
+            </div>
+           
+        </div>
+         <div class="banner-image">
+                <img src="./images/my-pic.png" alt="">
+            </div>
+     </section>
+    <!-- Banner Section End here -->
+
+
+    </header>
     </header>
     <!-- Header Section Ends here -->
 
