--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
 
             <div class="about-info">
                 <div class="info-card">
-                    <p>Name</p>
+                    <p>Name:</p>
                     <h4>Abdus Salam</h4>
                 </div>
                 <div class="info-card">
-                    <p>Name</p>
-                    <h4>Abdus Salam</h4>
+                    <p>Email:</p>
+                    <h4>inf@gmail.com</h4>
                 </div>
                 <div class="info-card">
-                    <p>Name</p>
-                    <h4>Abdus Salam</h4>
+                    <p>Date of birth:</p>
+                    <h4>11 November 1987</h4>
                 </div>
                 <div class="info-card">
-                    <p>Name</p>
-                    <h4>Abdus Salam</h4>
+                    <p>From:</p>
+                    <h4>Rajshahi, Bangladesh</h4>
                 </div>
             </div>
         </div>
